database password changed as per my requirement

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ default: &default
   adapter: mysql2
   database: curry
   username: root
-  password: sairam
+  password: password
   host: localhost
 
 development:
